--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,24 @@
 * {
   font-family: "SF Pro Display";
+  background-color: #404258;
 }
 
-
 .App {
+  height: 100vh;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
+}
+
+.App-Footer {
+  padding: 1rem;
+  color: lightcyan;
+}
+
+.App-Footer a {
+  color: lightcyan;
 }
 
 .App-logo {
